force-app/main/default/objects/Configuration_Product__c/Configuration_Product__c.object-meta.xml
<CustomObject>
    <label>Configuration Product</label>
    <nameField>
        <label>Configuration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>