force-app/main/default/objects/Configuration_Product__c/fields/Additional_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Additional_Delivery_Time__c</fullName>
    <description>Additional Time for Delivery in Calendar Days</description>
    <inlineHelpText>Additional Time for Delivery in Calendar Days</inlineHelpText>
    <label>Additional Delivery Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>