force-app/main/default/objects/Configuration_Product__c/fields/Additional_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Additional_Production_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Additional Time required by the Factory to finish Production in Calendar Days</description>
    <inlineHelpText>Additional Time required by the Factory to finish Production in Calendar Days</inlineHelpText>
    <label>Additional Production Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>