force-app/main/default/objects/Configuration_Product__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Configuration Products</relationshipLabel>
    <relationshipName>Configuration_Products</relationshipName>
    <type>Lookup</type>
</CustomField>