force-app/main/default/objects/Configuration_Product__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration Plan</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Configuration Products</relationshipLabel>
    <relationshipName>Configuration_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>