force-app/main/default/objects/Configuration_Product__c/fields/Confirmed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Delivery_Date__c</fullName>
    <description>Confirmed delivery date value from Production</description>
    <label>Confirmed Delivery Date</label>
    <type>Date</type>
</CustomField>