force-app/main/default/objects/Configuration_Product__c/fields/Contract_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Product_Description__c</fullName>
    <description>Text Field to be used in the contract to fill the RVN specific attributes of the product</description>
    <formula>CASE(
Product__r.Name,
&quot;Lumon Glazing Retractable&quot;, &quot;Pystypuitteeton parvekelasijärjestelmä.&quot; &amp; BR() &amp; &quot;Lasituksen säätökisko peittää mahdolliset rakenteiden vinoudet ja tiivistää yläkiskon ja katon välisen raon.&quot; &amp; BR() &amp; &quot;Yläprofiilin väri: &quot; &amp; Upper_Profile_Color__c &amp; BR() &amp; &quot;Alaprofiilin väri: &quot; &amp; Lower_Profile_Color__c &amp; BR() &amp; &quot;Lasi paneelien määrä: &quot; &amp; TEXT(Glass_Panel_Amount__c),
&quot;Lumon Glazing Sliding&quot;, &quot;Yläprofiilin väri: &quot; &amp; Upper_Profile_Color__c &amp; BR() &amp; &quot;Alaprofiilin väri: &quot; &amp; Lower_Profile_Color__c &amp; BR() &amp; &quot;Lasi paneelien määrä: &quot; &amp; TEXT(Glass_Panel_Amount__c),
&quot;Lumon Fixed Wall&quot;, &quot;Yläprofiilin väri: &quot; &amp; Upper_Profile_Color__c &amp; BR() &amp; &quot;Alaprofiilin väri: &quot; &amp; Lower_Profile_Color__c &amp; BR() &amp; &quot;Lasi paneelien määrä: &quot; &amp; TEXT(Glass_Panel_Amount__c),
&quot;Prefabricated Terrace 3&quot;, &quot;Valmisterassin runko koostuu vakioidusta runkojärjestelmästä, jonka yksityiskohdat ovat viimeisteltyjä. Runkomateriaali polyesterijauhemaalattua alumiinia.&quot;,
&quot;Prefabricated Terrace 4&quot;, &quot;Valmisterassin runko koostuu vakioidusta runkojärjestelmästä, jonka yksityiskohdat ovat viimeisteltyjä. Runkomateriaali polyesterijauhemaalattua alumiinia.&quot;,
&quot;Text not defined for product&quot;)</formula>
    <inlineHelpText>Product definition that is included in contract.</inlineHelpText>
    <label>Contract Product Description OLD</label>
    <type>Text</type>
</CustomField>