force-app/main/default/objects/Configuration_Product__c/fields/Count_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_Items__c</fullName>
    <label>Count Items OLD</label>
    <summaryForeignKey>Configuration_Option__c.Configuration_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>