force-app/main/default/objects/Configuration_Product__c/fields/Delivery_Batch__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Batch</label>
    <referenceTo>Delivery_Batch__c</referenceTo>
    <relationshipLabel>Configuration Products</relationshipLabel>
    <relationshipName>Configuration_Products</relationshipName>
    <type>Lookup</type>
</CustomField>