force-app/main/default/objects/Configuration_Product__c/fields/Delivery_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Batch_Number__c</fullName>
    <description>The Number of the Delivery Batch</description>
    <inlineHelpText>The Number of the Delivery Batch</inlineHelpText>
    <label>Delivery Batch Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>