force-app/main/default/objects/Configuration_Product__c/fields/Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Days__c</fullName>
    <description>Estimated Time in Days to ship to Delivery Location</description>
    <inlineHelpText>Estimated Time in Days to ship to Delivery Location</inlineHelpText>
    <label>Delivery Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>