force-app/main/default/objects/Configuration_Product__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <description>Estimated Date when Products are Delivered to the Site</description>
    <inlineHelpText>Estimated Date when Products are Delivered to the Site</inlineHelpText>
    <label>Estimated Delivery Date OLD</label>
    <type>Date</type>
</CustomField>