force-app/main/default/objects/Configuration_Product__c/fields/Estimated_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Production_Time__c</fullName>
    <description>Estimated Time required by Factory to finish Production in Calendar Days</description>
    <inlineHelpText>Estimated Time required by Factory to finish Production in Calendar Days</inlineHelpText>
    <label>Estimated Production Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>