force-app/main/default/objects/Configuration_Product__c/fields/Features_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Features_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce representation of hasFeaturesBeenConfirmed</description>
    <label>Features Confirmed OLD</label>
    <type>Checkbox</type>
</CustomField>