force-app/main/default/objects/Configuration_Product__c/fields/Glass_Panel_Amount__c.field-meta.xml
<CustomField>
    <fullName>Glass_Panel_Amount__c</fullName>
    <description>&quot;glass_panel_amount&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;glass_panel_amount&quot; in the Visual Output JSON</inlineHelpText>
    <label>Glass Panel Amount OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>