force-app/main/default/objects/Configuration_Product__c/fields/hasInstallation__c.field-meta.xml
<CustomField>
    <fullName>hasInstallation__c</fullName>
    <label>hasInstallation</label>
    <summaryFilterItems>
        <field>Configuration_Option__c.hasInstallation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Configuration_Option__c.Configuration_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>