force-app/main/default/objects/Configuration_Product__c/fields/hasItems__c.field-meta.xml
<CustomField>
    <fullName>hasItems__c</fullName>
    <description>Indicates if there is configurations Items existing for this Product</description>
    <formula>IF (Count_Items__c &gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasItems</label>
    <type>Checkbox</type>
</CustomField>