force-app/main/default/objects/Configuration_Product__c/fields/Inspection_Code__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Code__c</fullName>
    <description>Salesforce equivalent of productInspectCode</description>
    <label>Inspection Code OLD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>