force-app/main/default/objects/Configuration_Product__c/fields/Installable_Product__c.field-meta.xml
<CustomField>
    <fullName>Installable_Product__c</fullName>
    <formula>Product__r.Installation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installable Product</label>
    <type>Checkbox</type>
</CustomField>