force-app/main/default/objects/Configuration_Product__c/fields/Installation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Completed_Date__c</fullName>
    <description>Date when Installation is completed</description>
    <inlineHelpText>Date when Installation is completed</inlineHelpText>
    <label>Installation Completed Date OLD</label>
    <type>Date</type>
</CustomField>