force-app/main/default/objects/Configuration_Product__c/fields/Installation_Days__c.field-meta.xml
<CustomField>
    <fullName>Installation_Days__c</fullName>
    <description>Estimated Time in Days to finish Installation</description>
    <inlineHelpText>Estimated Time in Days to finish Installation</inlineHelpText>
    <label>Installation Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>