force-app/main/default/objects/Configuration_Product__c/fields/Installation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Installation_Hours__c</fullName>
    <label>Installation Hours</label>
    <summarizedField>Configuration_Option__c.Installation_Hours__c</summarizedField>
    <summaryForeignKey>Configuration_Option__c.Configuration_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>