force-app/main/default/objects/Configuration_Product__c/fields/Installation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date__c</fullName>
    <description>Date when Installation Starts</description>
    <inlineHelpText>Date when Installation Starts</inlineHelpText>
    <label>Installation Start Date</label>
    <type>Date</type>
</CustomField>