force-app/main/default/objects/Configuration_Product__c/fields/Installer_Message__c.field-meta.xml
<CustomField>
    <fullName>Installer_Message__c</fullName>
    <description>Information regarding the installation from Sales Person to the Installer. This is RVN specific information.</description>
    <label>Installer Message OLD</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>