force-app/main/default/objects/Configuration_Product__c/fields/Lower_Fastening_Material__c.field-meta.xml
<CustomField>
    <fullName>Lower_Fastening_Material__c</fullName>
    <description>&quot;lower_fastening_material&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;lower_fastening_material&quot; in the Visual Output JSON</inlineHelpText>
    <label>Lower Fastening Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>