force-app/main/default/objects/Configuration_Product__c/fields/Lower_Profile_Seal__c.field-meta.xml
<CustomField>
    <fullName>Lower_Profile_Seal__c</fullName>
    <description>&quot;lower_profile_seal&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;lower_profile_seal&quot; in the Visual Output JSON</inlineHelpText>
    <label>Lower Profile Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>