force-app/main/default/objects/Configuration_Product__c/fields/Measurements_Verified__c.field-meta.xml
<CustomField>
    <fullName>Measurements_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce equivalent of hasMeasurementsBeenVerified</description>
    <label>Measurements Verified</label>
    <type>Checkbox</type>
</CustomField>