force-app/main/default/objects/Configuration_Product__c/fields/NumberOfLineItems__c.field-meta.xml
<CustomField>
    <fullName>NumberOfLineItems__c</fullName>
    <label>Number of Line Items</label>
    <summaryForeignKey>Configuration_Option__c.Configuration_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>