force-app/main/default/objects/Configuration_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The Opportunity the (Parent) Configuration belongs to</description>
    <formula>Configuration__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity the (Parent) Configuration belongs to</inlineHelpText>
    <label>Opportunity OLD</label>
    <type>Text</type>
</CustomField>