force-app/main/default/objects/Configuration_Product__c/fields/Parent_Configuration_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Configuration_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Configuration Product OLD</label>
    <referenceTo>Configuration_Product__c</referenceTo>
    <relationshipLabel>Configuration Products</relationshipLabel>
    <relationshipName>Configuration_Products</relationshipName>
    <type>Lookup</type>
</CustomField>