force-app/main/default/objects/Configuration_Product__c/fields/Plan_Apartment__c.field-meta.xml
<CustomField>
    <fullName>Plan_Apartment__c</fullName>
    <description>Plan Apartment used in the configuration</description>
    <label>Plan Apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>