force-app/main/default/objects/Configuration_Product__c/fields/Plan_Floor__c.field-meta.xml
<CustomField>
    <fullName>Plan_Floor__c</fullName>
    <description>Plan Floor used in the configuration</description>
    <label>Plan Floor OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>