force-app/main/default/objects/Configuration_Product__c/fields/Plan_Line__c.field-meta.xml
<CustomField>
    <fullName>Plan_Line__c</fullName>
    <description>Plan Line used in the configuration</description>
    <label>Plan Line OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>