force-app/main/default/objects/Configuration_Product__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Lumon Plan Name as part of configuration</description>
    <inlineHelpText>Lumon Plan Name as part of configuration</inlineHelpText>
    <label>Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>