force-app/main/default/objects/Configuration_Product__c/fields/Preferred_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Date__c</fullName>
    <description>Customer Preferred Date when Products are Delivered to the Site</description>
    <inlineHelpText>Customer Preferred Date when Products are Delivered to the Site</inlineHelpText>
    <label>Preferred Delivery Date OLD</label>
    <type>Date</type>
</CustomField>