force-app/main/default/objects/Configuration_Product__c/fields/Product_Length__c.field-meta.xml
<CustomField>
    <fullName>Product_Length__c</fullName>
    <label>Product Length OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>