force-app/main/default/objects/Configuration_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <inlineHelpText>Second Level Grouping of Products and Services</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Types</valueSetName>
    </valueSet>
</CustomField>