force-app/main/default/objects/Configuration_Product__c/fields/ProductIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ProductIdentifier__c</fullName>
    <description>8 Digit Identifier for Configuration Products
Used in the RVN Identifier &lt;OpportunityNumber&gt;&lt;ProductIdentifier)</description>
    <displayFormat>6{0000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier for Configuration Products</inlineHelpText>
    <label>Product Identifier</label>
    <type>AutoNumber</type>
</CustomField>