force-app/main/default/objects/Configuration_Product__c/fields/Production_Days__c.field-meta.xml
<CustomField>
    <fullName>Production_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Production Days OLD</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>