force-app/main/default/objects/Configuration_Product__c/fields/Production_Extra_Days__c.field-meta.xml
<CustomField>
    <fullName>Production_Extra_Days__c</fullName>
    <description>Max Value of the Extra Production Days</description>
    <label>Production Extra Days</label>
    <summarizedField>Configuration_Option__c.Production_Extra_Days__c</summarizedField>
    <summaryForeignKey>Configuration_Option__c.Configuration_Product__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>