force-app/main/default/objects/Configuration_Product__c/fields/Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Time__c</fullName>
    <formula>MAX(Production_Days__c) +MAX(Production_Extra_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>