force-app/main/default/objects/Configuration_Product__c/fields/Reclamation_Product__c.field-meta.xml
<CustomField>
    <fullName>Reclamation_Product__c</fullName>
    <formula>Product__r.Reclamation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reclamation Product</label>
    <type>Checkbox</type>
</CustomField>