force-app/main/default/objects/Configuration_Product__c/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <description>Formula Field to generate the RVN Number</description>
    <formula>Opportunity_Number__c + IF (Visual_Structure_Number__c != null, Visual_Structure_Number__c, ProductIdentifier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generated RVN</inlineHelpText>
    <label>RVN</label>
    <type>Text</type>
</CustomField>