force-app/main/default/objects/Configuration_Product__c/fields/RVN_Number__c.field-meta.xml
<CustomField>
    <fullName>RVN_Number__c</fullName>
    <description>Salesforce equivalent of rvn of Product</description>
    <externalId>true</externalId>
    <label>RVN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>