force-app/main/default/objects/Configuration_Product__c/fields/Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Code__c</fullName>
    <description>Code of the Product as using in External Systems</description>
    <formula>Product__r.Sales_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code of the Product as using in External Systems</inlineHelpText>
    <label>Sales Code</label>
    <type>Text</type>
</CustomField>