force-app/main/default/objects/Configuration_Product__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>The Unique Identifier of a Configuration Product (RVN)</description>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>