force-app/main/default/objects/Configuration_Product__c/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <formula>Product__r.Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Product OLD</label>
    <type>Checkbox</type>
</CustomField>