force-app/main/default/objects/Configuration_Product__c/fields/Sovelia_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Product_Id__c</fullName>
    <label>Sovelia Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>