force-app/main/default/objects/Configuration_Product__c/fields/Special__c.field-meta.xml
<CustomField>
    <fullName>Special__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RVN is marked as special which means that additional configuration items will be added to configuration</description>
    <label>Special</label>
    <type>Checkbox</type>
</CustomField>