force-app/main/default/objects/Configuration_Product__c/fields/Upper_Profile_Color__c.field-meta.xml
<CustomField>
    <fullName>Upper_Profile_Color__c</fullName>
    <description>&quot;upper_profile_color&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;upper_profile_color&quot; in the Visual Output JSON</inlineHelpText>
    <label>Upper Profile Color OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>