force-app/main/default/objects/Configuration_Product__c/fields/Upper_Seal__c.field-meta.xml
<CustomField>
    <fullName>Upper_Seal__c</fullName>
    <description>&quot;upper_seal&quot; in the Visual Output JSON</description>
    <inlineHelpText>&quot;upper_seal&quot; in the Visual Output JSON</inlineHelpText>
    <label>Upper Seal OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>