force-app/main/default/objects/Configuration_Product__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <formula>IF(Inspection_Code__c = 2, IMAGE(&apos;/img/msg_icons/error32.png&apos;,&apos;ERROR&apos;,20,20),  
 IF(!Measurements_Verified__c &amp;&amp; !Features_Confirmed__c, IMAGE(&apos;/img/msg_icons/warning32.png&apos;,&apos;WARN&apos;,20,20), 
  IF(!Measurements_Verified__c || !Features_Confirmed__c, IMAGE(&apos;/img/msg_icons/info32.png&apos;,&apos;WARN&apos;,20,20), 
   IMAGE(&apos;/img/msg_icons/confirm32.png&apos;,&apos;WARN&apos;,20,20)
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification</label>
    <type>Text</type>
</CustomField>