force-app/main/default/objects/Configuration_Product__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <description>Indication of the Verification status</description>
    <formula>IF(Inspection_Code__c = 2, &apos;Error&apos;,
IF(!Measurements_Verified__c &amp;&amp; !Features_Confirmed__c, &apos;Warning&apos;,
IF(!Measurements_Verified__c || !Features_Confirmed__c, &apos;Info&apos;,
&apos;Success&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification Status</label>
    <type>Text</type>
</CustomField>