force-app/main/default/objects/Configuration_Product__c/fields/Visual_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Visual_Product_Id__c</fullName>
    <label>Visual Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>