force-app/main/default/objects/Configuration_Product__c/fields/Visual_Structure_Number__c.field-meta.xml
<CustomField>
    <fullName>Visual_Structure_Number__c</fullName>
    <description>The Unique Id of the Structure (Space) used in the Plan</description>
    <inlineHelpText>The Unique Id of the Structure (Space) used in the Plan</inlineHelpText>
    <label>Visual Structure Number OLD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>